# crownstone-router-firmware

./: CMakeLists.txt  README.md  flake.nix  prj.conf
boards/: esp32.overlay
include/: cs_PacketHandling.h  cs_ReturnTypes.h  cs_Router.h  cs_RouterProtocol.h
include/drivers/: cs_Uart.h  cs_Wifi.h
include/drivers/ble/: cs_BleCentral.h  cs_CrownstoneCentral.h  cs_ServiceUuid.h
include/drivers/network/: cs_Wifi.h
include/drivers/uart/: cs_Rs485.h
include/network/: cs_Wifi.h
include/socket/: cs_CaCertificate.h  cs_HttpClient.h  cs_Socket.h  cs_WebSocket.h
src/: cs_PacketHanding.cpp  cs_Router.cpp  cs_Socket.cpp  cs_Util.cpp  cs_WebSocket.cpp
src/drivers/: cs_Uart.cpp  cs_Wifi.cpp
src/drivers/ble/: cs_BleCentral.cpp  cs_CrownstoneCentral.cpp  cs_ServiceUuid.cpp
src/drivers/network/: cs_Wifi.cpp
src/drivers/uart/: cs_Rs485.cpp
src/network/: cs_Wifi.cpp
src/socket/: cs_HttpClient.cpp  cs_Socket.cpp  cs_WebSocket.cpp
